--- a/components/question-info/question-info.wxml
+++ b/components/question-info/question-info.wxml
@@ -1,7 +1,7 @@
 <view class="container">
   <view class="left">
     <image src="{{solvedFlag?'/assets/image/done.svg':'/assets/image/undone.svg'}}" class="icon" />
-    <block wx:if="{{isOwn}}">
+    <block wx:if="{{isOwn&&canConduct}}">
       <the-button size="tiny" bind:the_tap="flagSolved" text="{{solvedFlag?'取消标记':'标记解决'}}"></the-button>
       <the-button size="tiny" size="tiny" bind:the_tap="correntQuestion" text="修改"></the-button>
       <the-button size="tiny" size="tiny" bind:the_tap="deleteQuestion" text="删除"></the-button>
