write the basic collect question but it not work because the lack of function of backend

--- a/components/question-info/question-info.wxml
+++ b/components/question-info/question-info.wxml
@@ -17,6 +17,10 @@
       {{likeCount}}
     </view>
     <view class="item">
+      <image bind:tap="collectQuestion" class="icon" src="{{collectStatus=='已收藏'?'/assets/image/collect.svg':'/assets/image/uncollect.svg'}}" mode="heightFix" />
+      {{collectCount}}
+    </view>
+    <view class="item">
       <image class="icon" src="/assets/image/comment.svg" mode="heightFix" />
       {{commentCount}}
     </view>
