--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -14,6 +14,9 @@
       <navigator url="/pages/questions/questions?pageType=3">
         <mp-cell value="收藏列表" link></mp-cell>
       </navigator>
+      <navigator url="/pages/message/message">
+        <mp-cell value="消息" link></mp-cell>
+      </navigator>
     </mp-cells>
   </view>
 </block>
