--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -1,10 +1,7 @@
 <block wx:if="{{username}}">
   <view class="container">
     <view class="username">{{username}}</view>
-    <mp-cells ext-class="my-cells">
-      <view bind:tap="logout">
-        <mp-cell value="退出登录" link></mp-cell>
-      </view>
+    <mp-cells>
       <navigator url="/pages/questions/questions?pageType=1">
         <mp-cell value="浏览记录" link></mp-cell>
       </navigator>
@@ -15,22 +12,25 @@
         <mp-cell value="收藏列表" link></mp-cell>
       </navigator>
       <navigator url="/pages/message/message">
-        <mp-cell value="消息" link></mp-cell>
+        <mp-cell link>
+          消息 <mp-badge content="{{unreadCount}}"></mp-badge>
+        </mp-cell>
       </navigator>
+      <view bind:tap="logout">
+        <mp-cell value="退出登录" link></mp-cell>
+      </view>
     </mp-cells>
   </view>
 </block>
 <block wx:else>
   <view class="container">
-    <view class="button">
+    <mp-cells>
       <navigator url="/pages/login/login">
-        <the-button size="small" text="登录"></the-button>
+        <mp-cell value="登录" link></mp-cell>
       </navigator>
-    </view>
-    <view class="button">
       <navigator url="/pages/register/register">
-        <the-button size="small" text="注册"></the-button>
+        <mp-cell value="注册" link></mp-cell>
       </navigator>
-    </view>
+    </mp-cells>
   </view>
 </block>
